// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad region 1`] = `
Object {
  "region": Object {
    "id": "yup:string.uuid",
  },
}
`;

exports[`should be invalid for bad uuid 1`] = `
Object {
  "id": "yup:string.uuid",
}
`;

exports[`should be invalid for empty alt names 1`] = `
Object {
  "altNames": Array [
    "yup:string.nonEmpty",
  ],
}
`;

exports[`should be invalid for empty name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for extra fields 1`] = `
Object {
  "undefined": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;
